--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">saheel.</a>
+                        <a href="https://saheel-raj.github.io/CodiT/">saheel.</a>
                   </span>
 
                   <ul id="menu">
